@@ -1,3 +1,7 @@
+2008-08-18  Andreas Krebbel  <krebbel1@de.ibm.com>
+
+ 	* gcc.c-torture/compile/20080806-1.c: New testcase.
+
 2008-08-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/37101
